--- a/src/app/[locale]/globals.css
+++ b/src/app/[locale]/globals.css
@@ -113,3 +113,13 @@
     @apply bg-background text-foreground;
   }
 }
+
+/* Custom class to hide scrollbars */
+.scrollbar-hide {
+  -ms-overflow-style: none;  /* Internet Explorer 10+ */
+  scrollbar-width: none;  /* Firefox */
+}
+
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;  /* Safari and Chrome */
+}
